--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hello World
+<!doctype html>
+<html>
+
+<head>
+    <title>Judit Closa!</title>
+</head>
+
+<header>
+    <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">About Me</a></li>
+        <li><a href="">Curriculum</a></li>
+        <li><a href="">Projects</a></li>
+    </ul>
+</header>
+
+<body>
+
+</body>
+
+</html>
