--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!doctype html>
 <html>
+<link rel="stylesheet" href="main.css">
 
 <head>
     <title>Judit Closa!</title>
 </head>
 
 <header>
-    <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">About Me</a></li>
-        <li><a href="">Curriculum</a></li>
-        <li><a href="">Projects</a></li>
-    </ul>
+    <a href="">Home</a>
+    <a href="">About Me</a>
+    <a href="">Curriculum</a>
+    <a href="">Projects</a>
 </header>
 
 <body>
