--- a/index.html
+++ b/index.html
@@ -1,19 +1,40 @@
 <!doctype html>
 <html>
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="css/main.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
+    integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.2/js/bootstrap.min.js"
+    integrity="sha512-5BqtYqlWfJemW5+v+TZUs22uigI8tXeVah5S/1Z6qBLVO7gakAOtkOzUtgq6dsIo5c0NJdmGPs0H9I+2OHUHVQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+
 
 <head>
     <title>Judit Closa!</title>
 </head>
 
-<header>
-    <a href="">Home</a>
-    <a href="">About Me</a>
-    <a href="">Curriculum</a>
-    <a href="">Projects</a>
-</header>
-
 <body>
+    <div class="container-fluid navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Projects</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Curriculum</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contact me</a>
+            </li>
+
+        </ul>
+    </div>
+    <div class="mainBody">
+        
+    </div>
+
+    <script src="js/main.js"></script>
 
 </body>
 
