--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html>
-<link rel="stylesheet" href="css/main.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="css/main.css">
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
     integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -16,7 +18,7 @@
 </head>
 
 <body>
-    <div class="container-fluid navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
+    <div class="container-fluid navbar navbar-expand-sm bg-page navbar-dark justify-content-center">
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="#">Projects</a>
@@ -30,11 +32,22 @@
 
         </ul>
     </div>
-    <div class="mainBody">
-        
+    <div class="projectDiv pageFormat">
+
     </div>
 
+
+
+
+
+    <div class="curriculumDiv pageFormat">
+
+    </div>
+    <div class="contactDiv pageFormat">
+
+    </div>
     <script src="js/main.js"></script>
+    <script src="js/projectCard.js"></script>
 
 </body>
 
