--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
 
 
 
-
-
     <div class="curriculumDiv pageFormat">
-
+        <iframe src="sources/cv.pdf#toolbar=0"  width="65%" ></iframe>
+        <div>    <i class="fa-solid fa-floppy-disk"><a href="sources/cv.pdf">Download</a></i>
+            <i class="fa-brands fa-linkedin"><a href="https://www.linkedin.com/in/judit-closa-10333a240/">LinkedIn</a></i>
+        </div>
     </div>
     <div class="contactDiv pageFormat">
 
